# agora-effect-registry

./: .gitignore  CHANGELOG.md  Makefile  README.md  agora-effect-registry.cabal  flake.nix
agora-effect-registry/: AgoraRegistry.hs
agora-effect-registry-exe/: Api.hs  AppM.hs  EffectRegistry.hs  Main.hs  Options.hs  Server.hs
agora-effect-registry-server/AgoraRegistry/Server/: Api.hs  AppM.hs  EffectRegistry.hs  Options.hs  Server.hs  Types.hs
agora-effect-registry-test/: ApiTests.hs  CodeGenTests.hs  FixtureTests.hs  Main.hs
agora-effect-registry/AgoraRegistry/: DatumValidation.hs  Dev.hs  Generation.hs  Parsing.hs  Schema.hs
agora-effect-registry/AgoraRegistry/Generation/: Plutarch.hs
dhall/: Plutus.dhall  Prelude.dhall  agora.dhall
dhall/effects/: TreasuryWithdrawal.dhall
effects/: Test.json  TreasuryWithdrawal.json
test/fixtures/json-datums/invalid/: bytes_1.json  bytes_2.json  constr_1.json  constr_2.json  constr_3.json  hash28_1.json  integer_1.json  list_1.json  list_2.json  map_1.json  map_2.json  oneOf_1.json  plutusAddress_1.json  plutusAddress_2.json  plutusCredential_1.json  plutusCredential_2.json  plutusValue_1.json  plutusValue_2.json  plutusValue_3.json  shapedList_1.json  shapedList_2.json  shapedList_3.json
test/fixtures/json-datums/valid/: any_10.json  any_11.json  any_2.json  any_4.json  any_5.json  any_7.json  any_8.json  any_9.json  constr_1.json  integer_1.json  list_1.json  map_1.json  oneOf_1.json  oneOf_2.json  plutusAddress_1.json  plutusAddress_2.json  plutusCredential_1.json  plutusCredential_2.json  plutusHash28_1.json  plutusHash32_1.json  plutusValue_1.json  plutusValue_2.json  plutusValue_3.json  plutusValue_4.json  shapedListAny_1.json  shapedList_1.json
test/fixtures/schemas/: any.json  bytes.json  constr.json  integer.json  list.json  map.json  oneOf.json  plutusAddress.json  plutusCredential.json  plutusHash28.json  plutusHash32.json  plutusValue.json  shapedList.json  shapedListAny.json
