cabal-version:      3.0
name:               agora-effect-registry
version:            1.1.1
extra-source-files: CHANGELOG.md
author:             Emily Martins <emi@haskell.fyi>
license:            Apache-2.0

--------------------------------------------------------------------------------
-- Common Stanza Declarations

-- Language options, warnings, some options for plutus

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -Wredundant-constraints -fprint-explicit-foralls
    -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    NoFieldSelectors

  default-language:   Haskell2010

common deps
  build-depends:
    , aeson
    , ansi-terminal
    , base                  >=4.14 && <5
    , base-compat
    , base16
    , bytestring
    , cache
    , cardano-binary
    , cborg
    , containers
    , extra
    , generics-sop
    , hashable
    , http-types
    , optics-core
    , optics-th
    , optparse-applicative
    , plutus-core
    , plutus-ledger-api
    , prettyprinter
    , serialise
    , servant
    , servant-server
    , template-haskell
    , text
    , utf8-string
    , wai
    , wai-cors
    , warp

  mixins:

library
  import:          lang, deps
  hs-source-dirs:  agora-effect-registry
  exposed-modules:
    AgoraRegistry.DatumValidation
    AgoraRegistry.Parsing
    AgoraRegistry.Schema

  other-modules:

executable agora-effect-registry-exe
  import:         lang, deps
  hs-source-dirs: agora-effect-registry-exe
  main-is:        Main.hs
  build-depends:  agora-effect-registry
  other-modules:
    Api
    AppM
    EffectRegistry
    Server
