cabal-version:      3.0
name:               agora-effect-registry
version:            1.1.1
extra-source-files: CHANGELOG.md
author:             Emily Martins <emi@haskell.fyi>
license:            Apache-2.0

--------------------------------------------------------------------------------
-- Common Stanza Declarations

-- Language options, warnings, some options for plutus

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -Wredundant-constraints -fprint-explicit-foralls
    -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    NoFieldSelectors

  default-language:   Haskell2010

common deps
  build-depends:
    , aeson
    , base               >=4.14 && <5
    , base-compat
    , base16
    , bytestring
    , containers
    , extra
    , optics-core
    , optics-th
    , plutus-core
    , plutus-ledger-api
    , template-haskell
    , text
    , utf8-string

common server-deps
  build-depends:
    , cache
    , cardano-binary
    , cborg
    , http-types
    , serialise
    , servant
    , servant-server
    , wai
    , wai-cors

library
  import:          lang, deps
  hs-source-dirs:  agora-effect-registry
  exposed-modules:
    AgoraRegistry.DatumValidation
    AgoraRegistry.Parsing
    AgoraRegistry.Schema

library agora-effect-registry-server
  import:          lang, deps, server-deps
  hs-source-dirs:  agora-effect-registry-server
  exposed-modules:
    AgoraRegistry.Server.Api
    AgoraRegistry.Server.AppM
    AgoraRegistry.Server.EffectRegistry
    AgoraRegistry.Server.Server

  build-depends:   agora-effect-registry

executable agora-effect-registry-exe
  import:         lang, deps
  hs-source-dirs: agora-effect-registry-exe
  main-is:        Main.hs
  build-depends:
    , agora-effect-registry
    , agora-effect-registry-server
    , warp

test-suite agora-effect-registry-test
  import:         lang, deps
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: agora-effect-registry-test
  build-depends:
    , agora-effect-registry
    , agora-effect-registry-server
    , filepath
    , hspec

  other-modules:  FixtureTests
